@@ -7,7 +7,6 @@ import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.List;
@@ -23,6 +22,7 @@ import net.minecraft.util.ResourceLocation;
 import org.jetbrains.annotations.Nullable;
 
 import com.github.bsideup.jabel.Desugar;
+import com.hfstudio.guidenh.config.ModConfig;
 import com.hfstudio.guidenh.guide.GuidePage;
 import com.hfstudio.guidenh.guide.PageAnchor;
 import com.hfstudio.guidenh.guide.PageCollection;
@@ -85,6 +85,9 @@ import com.hfstudio.guidenh.guide.internal.markdown.MarkdownRuntimeBlocks.QuoteI
 import com.hfstudio.guidenh.guide.internal.mermaid.MermaidMindmapParser;
 import com.hfstudio.guidenh.guide.internal.util.GuideStringLines;
 import com.hfstudio.guidenh.guide.internal.util.LangUtil;
+import com.hfstudio.guidenh.guide.mediawiki.MediaWikiListContext;
+import com.hfstudio.guidenh.guide.mediawiki.MediaWikiListContextProvider;
+import com.hfstudio.guidenh.guide.mediawiki.MediaWikiPageIds;
 import com.hfstudio.guidenh.guide.render.GuidePageTexture;
 import com.hfstudio.guidenh.guide.sound.GuideSoundParsers;
 import com.hfstudio.guidenh.guide.style.BorderStyle;
@@ -151,7 +154,7 @@ public class PageCompiler {
     private static final State<List<SourceSlice>> SOURCE_SLICE_STACK = new State<>(
         "source_slice_stack",
         castClass(List.class),
-        Collections.emptyList());
+        List.of());
 
     private final PageCollection pages;
     private final ExtensionCollection extensions;
@@ -278,22 +281,24 @@ public class PageCompiler {
         }
 
         long totalNs = System.nanoTime() - parseStartedAt;
-        FMLLog.getLogger()
-            .info(
-                "[GuideNH] [PageCompiler] Parsed page {} lang={} totalNs={} normalizeNs={} footnoteNs={} sourceFrontmatterNs={} latexMaskNs={} commentMaskNs={} markdownParseNs={} latexRestoreNs={} htmlNormalizeNs={} astFrontmatterNs={} parseFailed={}",
-                id,
-                language,
-                totalNs,
-                normalizeNs,
-                footnoteNs,
-                sourceFrontmatterNs,
-                latexMaskNs,
-                commentMaskNs,
-                markdownParseNs,
-                latexRestoreNs,
-                htmlNormalizeNs,
-                astFrontmatterNs,
-                parseFailureMessage != null);
+        if (ModConfig.debug.enableDebugMode) {
+            FMLLog.getLogger()
+                .info(
+                    "[GuideNH] [PageCompiler] Parsed page {} lang={} totalNs={} normalizeNs={} footnoteNs={} sourceFrontmatterNs={} latexMaskNs={} commentMaskNs={} markdownParseNs={} latexRestoreNs={} htmlNormalizeNs={} astFrontmatterNs={} parseFailed={}",
+                    id,
+                    language,
+                    totalNs,
+                    normalizeNs,
+                    footnoteNs,
+                    sourceFrontmatterNs,
+                    latexMaskNs,
+                    commentMaskNs,
+                    markdownParseNs,
+                    latexRestoreNs,
+                    htmlNormalizeNs,
+                    astFrontmatterNs,
+                    parseFailureMessage != null);
+        }
 
         return new ParsedGuidePage(
             sourcePack,
@@ -433,13 +438,13 @@ public class PageCompiler {
             }
         }
 
-        return result != null ? result : new Frontmatter(null, Collections.emptyMap());
+        return result != null ? result : new Frontmatter(null, Map.of());
     }
 
     public static Frontmatter parseFrontmatterFromSource(ResourceLocation pageId, String pageContent) {
         var yamlText = extractFrontmatterText(pageContent);
         if (yamlText == null) {
-            return new Frontmatter(null, Collections.emptyMap());
+            return new Frontmatter(null, Map.of());
         }
 
         try {
@@ -447,7 +452,7 @@ public class PageCompiler {
         } catch (Exception e) {
             FMLLog.getLogger()
                 .error("[GuideNH] [PageCompiler] Failed to parse frontmatter for page {}", pageId, e);
-            return new Frontmatter(null, Collections.emptyMap());
+            return new Frontmatter(null, Map.of());
         }
     }
 
@@ -602,10 +607,7 @@ public class PageCompiler {
                 paragraph.setMarginTop(DEFAULT_ELEMENT_SPACING);
                 paragraph.setMarginBottom(DEFAULT_ELEMENT_SPACING);
                 layoutChild = paragraph;
-            } else if (child instanceof MdAstYamlFrontmatter) {
-                // This is handled by compile directly
-                layoutChild = null;
-            } else if (child instanceof MdAstDefinition) {
+            } else if (child instanceof MdAstYamlFrontmatter || child instanceof MdAstDefinition) {
                 layoutChild = null;
             } else if (child instanceof GfmTable astTable) {
                 MarkdownTableMeta meta = extractMarkdownTableMeta(children, i + 1);
@@ -626,15 +628,13 @@ public class PageCompiler {
                     compiler.compileBlockContext(this, layoutParent, el);
                 }
             } else if (child instanceof MdAstPhrasingContent phrasingContent) {
-                // Wrap in a paragraph with no margins, but try appending to an existing paragraph before this
                 if (previousLayoutChild instanceof LytParagraph paragraph) {
                     compileFlowContent(paragraph, phrasingContent);
                     continue;
-                } else {
-                    var paragraph = new LytParagraph();
-                    compileFlowContent(paragraph, phrasingContent);
-                    layoutChild = paragraph;
                 }
+                var paragraph = new LytParagraph();
+                compileFlowContent(paragraph, phrasingContent);
+                layoutChild = paragraph;
             } else {
                 layoutChild = createErrorBlock("Unhandled Markdown node in block context", child);
             }
@@ -752,7 +752,7 @@ public class PageCompiler {
             .size(); i++) {
             var child = astListItem.children()
                 .get(i);
-            compileBlockContext(Collections.singletonList(child), listItem);
+            compileBlockContext(List.of(child), listItem);
         }
     }
 
@@ -768,7 +768,7 @@ public class PageCompiler {
                 compileParagraphBlock(firstParagraph, parent);
             }
             for (int i = 1; i < children.size(); i++) {
-                compileBlockContext(Collections.singletonList(children.get(i)), parent);
+                compileBlockContext(List.of(children.get(i)), parent);
             }
             return;
         }
@@ -815,8 +815,7 @@ public class PageCompiler {
             itemImage.setInline(true);
             itemImage.setTooltipSuppressed(true);
             itemImage.setInlineYOffsetOverride(-1);
-            var inlineBlock = LytFlowInlineBlock.of(itemImage);
-            return inlineBlock;
+            return LytFlowInlineBlock.of(itemImage);
         }
 
         if (icon.kind() == QuoteIconKind.PNG) {
@@ -940,7 +939,7 @@ public class PageCompiler {
     private @Nullable String getTableRowText(GfmTableRow row) {
         StringBuilder sb = new StringBuilder();
         for (var cell : row.children()) {
-            if (sb.length() > 0) {
+            if (!sb.isEmpty()) {
                 sb.append(' ');
             }
             sb.append(cell.toText());
@@ -990,10 +989,10 @@ public class PageCompiler {
             span.modifyStyle(style -> style.italic(true));
             compileFlowContext(astEmphasis, span);
             layoutChild = span;
-        } else if (content instanceof MdAstDelete astEmphasis) {
+        } else if (content instanceof MdAstDelete astDelete) {
             var span = new LytFlowSpan();
             span.modifyStyle(style -> style.strikethrough(true));
-            compileFlowContext(astEmphasis, span);
+            compileFlowContext(astDelete, span);
             layoutChild = span;
         } else if (content instanceof MdAstUnderline astUnderline) {
             var span = new LytFlowSpan();
@@ -1274,11 +1273,11 @@ public class PageCompiler {
     private CsvFenceMeta parseCsvFenceMeta(@Nullable String meta) {
         if (meta == null || meta.trim()
             .isEmpty()) {
-            return new CsvFenceMeta(true, Collections.emptyList());
+            return new CsvFenceMeta(true, List.of());
         }
 
         boolean header = true;
-        List<Integer> widthHints = Collections.emptyList();
+        List<Integer> widthHints = List.of();
         for (String token : splitMetaTokens(meta)) {
             int equalsIndex = token.indexOf('=');
             if (equalsIndex <= 0 || equalsIndex == token.length() - 1) {
@@ -1320,7 +1319,7 @@ public class PageCompiler {
                 break;
             }
 
-            if (metaExpression.length() > 0) {
+            if (!metaExpression.isEmpty()) {
                 metaExpression.append(' ');
             }
             metaExpression.append(matcher.group(1));
@@ -1333,7 +1332,7 @@ public class PageCompiler {
 
         List<Integer> widthHints = parseWidthHintsFromMetaExpression(metaExpression.toString());
         if (widthHints.isEmpty()) {
-            return new MarkdownTableMeta(Collections.emptyList(), consumed);
+            return new MarkdownTableMeta(List.of(), consumed);
         }
 
         return new MarkdownTableMeta(widthHints, consumed);
@@ -1342,14 +1341,14 @@ public class PageCompiler {
     private MarkdownTableMeta extractMarkdownTableMetaFromSource(List<? extends MdAstAnyContent> children,
         int startIndex) {
         if (startIndex <= 0 || startIndex > children.size()) {
-            return new MarkdownTableMeta(Collections.emptyList(), 0);
+            return new MarkdownTableMeta(List.of(), 0);
         }
 
         MdAstAnyContent tableChild = children.get(startIndex - 1);
         if (!(tableChild instanceof MdAstNode tableNode) || tableNode.position() == null
             || tableNode.position()
                 .end() == null) {
-            return new MarkdownTableMeta(Collections.emptyList(), 0);
+            return new MarkdownTableMeta(List.of(), 0);
         }
 
         int endLine = tableNode.position()
@@ -1357,7 +1356,7 @@ public class PageCompiler {
             .line();
         String sourceText = getCurrentSourceText();
         if (endLine <= 0) {
-            return new MarkdownTableMeta(Collections.emptyList(), 0);
+            return new MarkdownTableMeta(List.of(), 0);
         }
 
         MarkdownTableMeta[] found = new MarkdownTableMeta[1];
@@ -1376,7 +1375,7 @@ public class PageCompiler {
             }
             return false;
         });
-        return found[0] != null ? found[0] : new MarkdownTableMeta(Collections.emptyList(), 0);
+        return found[0] != null ? found[0] : new MarkdownTableMeta(List.of(), 0);
     }
 
     private @Nullable String getParagraphTextValue(MdAstParagraph paragraph) {
@@ -1397,7 +1396,7 @@ public class PageCompiler {
                 return CsvTableCompiler.parseWidthHints(value);
             }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     private List<String> splitMetaTokens(String meta) {
@@ -1419,7 +1418,7 @@ public class PageCompiler {
                 continue;
             }
             if (Character.isWhitespace(ch) && !inQuotes) {
-                if (current.length() > 0) {
+                if (!current.isEmpty()) {
                     tokens.add(current.toString());
                     current.setLength(0);
                 }
@@ -1427,7 +1426,7 @@ public class PageCompiler {
             }
             current.append(ch);
         }
-        if (current.length() > 0) {
+        if (!current.isEmpty()) {
             tokens.add(current.toString());
         }
         return tokens;
@@ -1554,7 +1553,7 @@ public class PageCompiler {
             result.append(removeLeadingWhitespace(lines.get(i), minIndent));
         }
 
-        while (result.length() > 0 && result.charAt(result.length() - 1) == '\n') {
+        while (!result.isEmpty() && result.charAt(result.length() - 1) == '\n') {
             result.setLength(result.length() - 1);
         }
         if (Objects.equals(body, normalized) && body.endsWith("\n")) {
@@ -1600,19 +1599,23 @@ public class PageCompiler {
         try {
             String normalized = MermaidMindmapParser.normalize(source);
             LytMermaidMindmap block = new LytMermaidMindmap(MermaidMindmapParser.parse(normalized), normalized);
-            FMLLog.getLogger()
-                .info(
-                    "[GuideNH] [PageCompiler] Compiled fenced Mermaid runtime block for page {} ({} chars)",
-                    pageId,
-                    normalized.length());
+            if (ModConfig.debug.enableDebugMode) {
+                FMLLog.getLogger()
+                    .info(
+                        "[GuideNH] [PageCompiler] Compiled fenced Mermaid runtime block for page {} ({} chars)",
+                        pageId,
+                        normalized.length());
+            }
             return block;
         } catch (IllegalArgumentException e) {
-            FMLLog.getLogger()
-                .warn(
-                    "[GuideNH] [PageCompiler] Failed to compile fenced Mermaid runtime block for page {} from source: {}",
-                    pageId,
-                    source,
-                    e);
+            if (ModConfig.debug.enableDebugMode) {
+                FMLLog.getLogger()
+                    .warn(
+                        "[GuideNH] [PageCompiler] Failed to compile fenced Mermaid runtime block for page {} from source: {}",
+                        pageId,
+                        source,
+                        e);
+            }
             return null;
         }
     }
@@ -1715,11 +1718,15 @@ public class PageCompiler {
             span.appendText(tildes + "^");
             span.appendBreak();
 
-            FMLLog.getLogger()
-                .warn("[GuideNH] [PageCompiler] {}\n{}\n{}\n", text, line, tildes + "^");
+            if (ModConfig.debug.enableDebugMode) {
+                FMLLog.getLogger()
+                    .warn("[GuideNH] [PageCompiler] {}\n{}\n{}\n", text, line, tildes + "^");
+            }
         } else {
-            FMLLog.getLogger()
-                .warn("[GuideNH] [PageCompiler] {}\n", text);
+            if (ModConfig.debug.enableDebugMode) {
+                FMLLog.getLogger()
+                    .warn("[GuideNH] [PageCompiler] {}\n", text);
+            }
         }
 
         return span;
@@ -1764,10 +1771,19 @@ public class PageCompiler {
         ResourceLocation pageId) {
         PageCollection pages = compiler.getPageCollection();
         if (guideId.equals(pages.getId())) {
-            return pages.pageExists(pageId);
+            return pages.pageExists(pageId) || syntheticPageExists(pages, pageId);
         }
         var guide = GuideRegistry.getById(guideId);
-        return guide != null && guide.pageExists(pageId);
+        return guide != null && (guide.pageExists(pageId) || syntheticPageExists(guide, pageId));
+    }
+
+    private static boolean syntheticPageExists(Object pageContainer, ResourceLocation pageId) {
+        if (!MediaWikiPageIds.isSyntheticPage(pageId)
+            || !(pageContainer instanceof MediaWikiListContextProvider provider)) {
+            return false;
+        }
+        MediaWikiListContext context = provider.getMediaWikiListContext();
+        return context != null && context.getParsedPage(pageId) != null;
     }
 
     public interface PageLinkResolver {
@@ -1799,7 +1815,7 @@ public class PageCompiler {
     public String getCurrentSourceText() {
         List<SourceSlice> sourceSlices = getCompilerState(SOURCE_SLICE_STACK);
         if (!sourceSlices.isEmpty()) {
-            return sourceSlices.get(sourceSlices.size() - 1)
+            return sourceSlices.getLast()
                 .source();
         }
         return pageContent;
