@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -17,6 +16,7 @@ import net.minecraft.util.StringTranslate;
 
 import org.jetbrains.annotations.Nullable;
 
+import com.hfstudio.guidenh.config.ModConfig;
 import com.hfstudio.guidenh.guide.internal.datadriven.DataDrivenGuideLoader;
 import com.hfstudio.guidenh.guide.internal.util.LangUtil;
 
@@ -50,7 +50,7 @@ public class GuidePageLanguageIndex {
     public static Map<String, String> readPageKeys(InputStream input) throws IOException {
         Map<String, String> source = StringTranslate.parseLangFile(input);
         if (source.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         Map<String, String> filtered = new LinkedHashMap<>();
@@ -60,7 +60,7 @@ public class GuidePageLanguageIndex {
                 filtered.put(key, entry.getValue());
             }
         }
-        return filtered.isEmpty() ? Collections.emptyMap() : filtered;
+        return filtered.isEmpty() ? Map.of() : filtered;
     }
 
     private static Map<String, String> loadLanguage(String normalizedLanguage) {
@@ -71,14 +71,16 @@ public class GuidePageLanguageIndex {
             loadResourcePackLanguage(resourcePack, normalizedLanguage, merged);
         }
         long totalNs = System.nanoTime() - startedAt;
-        FMLLog.getLogger()
-            .info(
-                "[GuideNH] [GuidePageLanguageIndex] Loaded {} page language keys for language {} from {} resource packs in {} ns",
-                merged.size(),
-                normalizedLanguage,
-                activeResourcePacks.size(),
-                totalNs);
-        return merged.isEmpty() ? Collections.emptyMap() : Collections.unmodifiableMap(merged);
+        if (ModConfig.debug.enableDebugMode) {
+            FMLLog.getLogger()
+                .info(
+                    "[GuideNH] [GuidePageLanguageIndex] Loaded {} page language keys for language {} from {} resource packs in {} ns",
+                    merged.size(),
+                    normalizedLanguage,
+                    activeResourcePacks.size(),
+                    totalNs);
+        }
+        return merged.isEmpty() ? Map.of() : Map.copyOf(merged);
     }
 
     private static void loadResourcePackLanguage(IResourcePack resourcePack, String normalizedLanguage,
