@@ -1,6 +1,6 @@
 package com.hfstudio.guidenh.libs.mdx;
 
-import java.util.Collections;
+import java.util.List;
 
 import com.hfstudio.guidenh.libs.micromark.Extension;
 import com.hfstudio.guidenh.libs.micromark.symbol.Codes;
@@ -10,8 +10,8 @@ public class MdxSyntax {
     public static final Extension INSTANCE = new Extension();
 
     static {
-        INSTANCE.flow.put(Codes.lessThan, Collections.singletonList(JsxFlow.INSTANCE));
-        INSTANCE.text.put(Codes.lessThan, Collections.singletonList(JsxText.INSTANCE));
+        INSTANCE.flow.put(Codes.lessThan, List.of(JsxFlow.INSTANCE));
+        INSTANCE.text.put(Codes.lessThan, List.of(JsxText.INSTANCE));
     }
 
 }
